Implement full support for JVM type signatures
This is a breaking change, so bump to version 3.0.0